--- a/src/styles/componentes/_navbar.scss
+++ b/src/styles/componentes/_navbar.scss
@@ -1,13 +1,3 @@
-.navbar_nav{
-    background-color: black;
-    padding: 1rem;
-    
-    p{
-        color: wheat;
-
-        &:hover{
-            color: rgb(196, 178, 147);
-            cursor: pointer;
-        }
-    }
+.navbar_color_fondo{
+    background-color: $Light_grayish_blue;
 }
